--- a/old-event-inner.html
+++ b/old-event-inner.html
@@ -110,7 +110,7 @@
 
 	<main>
 
-		<section class="event events-block">
+		<section class="event events-block old-event-inner">
 			<div class="bg">
 				<img src="img/bg-18.png" alt="" class="img-1">
 			</div>
@@ -119,230 +119,71 @@
 			</div>
 			<div class="content-width" >
 				<ul class="breadcrumb">
-					<li><a href="index.html"><img src="img/icon-15.svg" alt="">Головна  </a><span><img src="img/icon-14.svg" alt=""></span> </li>
-					<li>Актуальні події</li>
+					<li><a href="index.html"><img src="img/icon-15.svg" alt="">Головна  </a><span><img src="img/icon-33.svg" alt=""></span> </li>
+					<li><a href="#">Минулі події</a><span><img src="img/icon-14.svg" alt=""></span></li>
+					<li>GoЙra! Camp: Карпатські Єті</li>
 				</ul>
-				<p class="h2">Актуальні події</p>
-				<div class="select-wrap">
-					<div class="wrap">
-						<ul>
-							<li class="is-active">
-								<a href="#" class="btn-default">Всі</a>
-							</li>
-							<li class="">
-								<a href="#" class="btn-default">Табори</a>
-							</li>
-							<li class="">
-								<a href="#" class="btn-default">Експедиції</a>
-							</li>
-							<li class="">
-								<a href="#" class="btn-default">Денні табори у Франику</a>
-							</li>
-							<li><a href="#" class="btn-default">Пригода на день</a></li>
+				<p class="h2">GoЙra! Camp: <br>Карпатські Єті</p>
+				<div class="content-text">
+					<img src="img/img-18.jpg" alt="" class="alignleft">
+					<div class="teg">
+						<p>#Табори</p>
+					</div>
+					<p class="loc">
+						<img src="img/icon-6.svg" alt="">
+						ур. Козьмещик, Закарпатська обл.
+					</p>
+					<ul class="info">
+						<li>Проводимо з 2022 року</li>
+					</ul>
 
-						</ul>
-					</div>
+					<p>Є у нас традиція: під самий Новий рік збирати групу сміливців і вирушати з ними у подорож до самого серця диких Карпат, щоб на власні очі побачити сліди снігової людини. Ми помандруємо до урочища Козьмещик, що розташоване між красунею Говерлою і величним Петросом. Саме тут зовсім недавно були помічені справжні Єті! </p>
+					<p>Є у нас традиція: під самий Новий рік збирати групу сміливців і вирушати з ними у подорож до самого серця диких Карпат, щоб на власні очі побачити сліди снігової людини. Ми помандруємо до урочища Козьмещик, що розташоване між красунею Говерлою і величним Петросом. Саме тут зовсім недавно були помічені справжні Єті! </p>
 				</div>
-				<div class="sub-title-wrap">
-					<p>Літо 2023</p>
+
+			</div>
+		</section>
+
+		<section class="marquee-wrap">
+			<div class="marquee">
+				<div class="item">
+					<p>Фантастичні зимові пригоди - гарантуємо! <img src="img/icon-8.svg" alt=""></p>
 				</div>
-				<div class="tab-item">
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! RockCamp на скелях Довбуша</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								ур. Козьмещик, Закарпатська обл.
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Наметовий табір серед скель у буковому лісі.
-								10 днів справжніх пригод та живого спілкування
-								в дикому куточку Карпат.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
+				<div class="item">
+					<p>Фантастичні зимові пригоди - гарантуємо! <img src="img/icon-8.svg" alt=""></p>
 				</div>
-				<div class="sub-title-wrap">
-					<p>Осінь 2023</p>
+				<div class="item">
+					<p>Фантастичні зимові пригоди - гарантуємо! <img src="img/icon-8.svg" alt=""></p>
 				</div>
-				<div class="tab-item">
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
+				<div class="item">
+					<p>Фантастичні зимові пригоди - гарантуємо! <img src="img/icon-8.svg" alt=""></p>
+				</div>
+			</div>
+		</section>
+
+		<section class="auto-slider-block auto-slider-mini" data-aos="fade-up" data-aos-delay="300">
+			<p class="h3">Як проходив табір</p>
+			<div class="content-width">
+				<div class="slider-wrap">
+					<div class="swiper auto-slider">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/img-19.jpg" alt="">
 							</div>
-							<p class="h3">GoЙra! RockCamp на скелях Довбуша</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								с. Бубнище, неподалік Болехова Івано-Франківської обл.
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Наметовий табір серед скель у буковому лісі.
-								10 днів справжніх пригод та живого спілкування
-								в дикому куточку Карпат.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
+							<div class="swiper-slide">
+								<img src="img/img-6.jpg" alt="">
+
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img-6.jpg" alt="">
 							</div>
 						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
 					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
+					<div class="nav-wrap">
+						<div class="swiper-button-prev auto-prev"><img src="img/icon-10.svg" alt=""></div>
+						<div class="swiper-button-next auto-next"><img src="img/icon-10.svg" alt=""></div>
 					</div>
-				</div>
-				<div class="bottom">
-					<a href="#events" class="btn-default fancybox btn-big">Повідомити про нові події</a>
+					<div class="swiper-pagination auto-pagination"></div>
 				</div>
 			</div>
 		</section>
