--- a/old-events.html
+++ b/old-events.html
@@ -110,7 +110,7 @@
 
 	<main>
 
-		<section class="event events-block">
+		<section class="event events-block old-event">
 			<div class="bg">
 				<img src="img/bg-18.png" alt="" class="img-1">
 			</div>
@@ -120,9 +120,9 @@
 			<div class="content-width" >
 				<ul class="breadcrumb">
 					<li><a href="index.html"><img src="img/icon-15.svg" alt="">Головна  </a><span><img src="img/icon-14.svg" alt=""></span> </li>
-					<li>Актуальні події</li>
+					<li>Минулі події</li>
 				</ul>
-				<p class="h2">Актуальні події</p>
+				<p class="h2">Минулі події</p>
 				<div class="select-wrap">
 					<div class="wrap">
 						<ul>
@@ -155,136 +155,6 @@
 							<p class="h3">GoЙra! RockCamp на скелях Довбуша</p>
 							<p class="loc">
 								<img src="img/icon-6.svg" alt="">
-								ур. Козьмещик, Закарпатська обл.
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Наметовий табір серед скель у буковому лісі.
-								10 днів справжніх пригод та живого спілкування
-								в дикому куточку Карпат.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! Trekking</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
-								Ґорґанський масив
-							</p>
-							<ul>
-								<li>Пт. 29 серп. - Пн. 05 вер. </li>
-								<li>8-15 років</li>
-								<li>13500 грн</li>
-							</ul>
-							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
-								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
-							</p>
-							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
-								<div class="link-wrap">
-									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
-								</div>
-							</div>
-						</div>
-						<figure>
-							<a href="#">
-								<img src="img/img-3.jpg" alt="">
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="sub-title-wrap">
-					<p>Осінь 2023</p>
-				</div>
-				<div class="tab-item">
-					<div class="item">
-						<div class="text">
-							<div class="teg">
-								<p>#Табори</p>
-							</div>
-							<p class="h3">GoЙra! RockCamp на скелях Довбуша</p>
-							<p class="loc">
-								<img src="img/icon-6.svg" alt="">
 								с. Бубнище, неподалік Болехова Івано-Франківської обл.
 							</p>
 							<ul>
@@ -297,7 +167,7 @@
 								в дикому куточку Карпат.
 							</p>
 							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
+
 								<div class="link-wrap">
 									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
 								</div>
@@ -328,7 +198,68 @@
 								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
 							</p>
 							<div class="btn-wrap">
-								<a href="#" class="btn-default btn-big">Зареєструватися</a>
+								<div class="link-wrap">
+									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
+								</div>
+							</div>
+						</div>
+						<figure>
+							<a href="#">
+								<img src="img/img-3.jpg" alt="">
+							</a>
+						</figure>
+					</div>
+					<div class="item">
+						<div class="text">
+							<div class="teg">
+								<p>#Табори</p>
+							</div>
+							<p class="h3">GoЙra! Trekking</p>
+							<p class="loc">
+								<img src="img/icon-6.svg" alt="">
+								Ґорґанський масив
+							</p>
+							<ul>
+								<li>Пт. 29 серп. - Пн. 05 вер. </li>
+								<li>8-15 років</li>
+								<li>13500 грн</li>
+							</ul>
+							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
+								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
+							</p>
+							<div class="btn-wrap">
+
+								<div class="link-wrap">
+									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
+								</div>
+							</div>
+						</div>
+						<figure>
+							<a href="#">
+								<img src="img/img-3.jpg" alt="">
+							</a>
+						</figure>
+					</div>
+					<div class="item">
+						<div class="text">
+							<div class="teg">
+								<p>#Табори</p>
+							</div>
+							<p class="h3">GoЙra! Trekking</p>
+							<p class="loc">
+								<img src="img/icon-6.svg" alt="">
+								Ґорґанський масив
+							</p>
+							<ul>
+								<li>Пт. 29 серп. - Пн. 05 вер. </li>
+								<li>8-15 років</li>
+								<li>13500 грн</li>
+							</ul>
+							<p>Маршрут: с. Максимець - ур. Пекло - г. Сивуля - г. Лопушна - пол. Боревка - г. Ігровець - г. Висока - пол. Середня - с. Стара Гута. Орієнтовно 30 км.
+								Повноцінний похід з маршрутом, рюкзаками, ватрою та ночівлею в наметах. Найкрутіша пригода для дітей, які люблять виклики.
+							</p>
+							<div class="btn-wrap">
+
 								<div class="link-wrap">
 									<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
 								</div>
@@ -341,9 +272,7 @@
 						</figure>
 					</div>
 				</div>
-				<div class="bottom">
-					<a href="#events" class="btn-default fancybox btn-big">Повідомити про нові події</a>
-				</div>
+
 			</div>
 		</section>
 
