--- a/teaching.html
+++ b/teaching.html
@@ -147,7 +147,7 @@
 						<p>Dictum at enim aliquam nunc. Id sed sociis faucibus et nibh quis scelerisque.</p>
 					</div>
 
-					<a href="#" class="read-more">+ Читати далі</a>
+					<a href="#" class="read-more"><img src="img/icon-42.svg" alt=""> Читати далі</a>
 				</div>
 			</div>
 		</section>
