--- a/_index.html
+++ b/_index.html
@@ -58,6 +58,7 @@
         <li><a href="old-event-inner.html">Картка пригоди (минулої)</a></li>
         <li><a href="event.html">Подія</a></li>
         <li><a href="teaching.html">Навчання просто неба</a></li>
+        <li><a href="festival.html">Сторінка фестивалів</a></li>
         <li><a href="form.html">Реєстраційна форма</a></li>
 
 
