--- a/_index.html
+++ b/_index.html
@@ -60,8 +60,10 @@
         <li><a href="teaching.html">Навчання просто неба</a></li>
         <li><a href="festival.html">Сторінка фестивалів</a></li>
         <li><a href="merch.html">Мерч</a></li>
+        <li><a href="merch2.html">Мерч 2</a></li>
         <li><a href="rental.html">Прокат</a></li>
-        <li><a href="form.html">Реєстраційна форма</a></li>
+        <li><a href="form.html">форми</a></li>
+
 
 
 
