--- a/adventures.html
+++ b/adventures.html
@@ -229,6 +229,7 @@
 						</p>
 						<div class="btn-wrap">
 							<a href="#" class="btn-default btn-big">Актуальні події </a>
+							<a href="#" class="btn-default btn-big btn-green">Минулі події </a>
 
 						</div>
 					</div>
