--- a/events.html
+++ b/events.html
@@ -343,6 +343,7 @@
 				</div>
 				<div class="bottom">
 					<a href="#events" class="btn-default fancybox btn-big">Повідомити про нові події</a>
+					<a href="#" class="btn-default btn-big btn-green">Переглянути минулі події</a>
 				</div>
 			</div>
 		</section>
